# actix-docker-compose-sqlx

./: .env  Cargo.toml  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml
actix-backend/: .gitattributes  Cargo.toml  Dockerfile  Dockerfile.dev  init.sh  sqlx-data.json
actix-backend/migrations/: 20210124161408_init.sql
actix-backend/src/: api.rs  how.rs  lib.rs  main.rs  startup.rs  state.rs
actix-backend/src/testing/: utils.rs
actix-backend/src/todo/: mod.rs  routes.rs
actix-backend/src/todo/handlers/: users.rs
actix-backend/src/todo/models/: users.rs
db/: schema.sql
nginx/: nginx.conf
src/: api.rs  handlers.rs  how.rs  main.rs  models.rs  routes.rs  state.rs
src/handlers/: health.rs  todo.rs
src/todo/: models.rs  routes.rs
src/todo/handlers/: users.rs
src/todo/models/: users.rs
