[package]
name = "actix-mysql-sqlx-todo"
version = "0.1.0"
authors = ["Roberts Ivanovs <robertsivanovs1999@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3.3"
actix-rt = "1.1.1"
sqlx = { version = "0.4.2", features = [
    "runtime-tokio-rustls",
    "mysql",
    "macros",
    "chrono",
    "migrate",
    "json",
    "offline",
] }
serde = "1.0"
serde_json = "1.0"
dotenv = "0.15.0"
env_logger = "0.8.2"
log = "0.4.13"
anyhow = "1.0"
async-trait = "0.1.42"
thiserror = "1.0"
serde-aux = "2.1.1"

[dev-dependencies]
futures = "0.3.12"
